# bacta

./: .coverage  .gitignore  Dockerfile  LOGGER_USAGE.md  README-old.md  README.md  TRADE_HISTORY_PLOT.md  actions.sh  build.sh  pyproject.toml  requirements-extras.txt  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
examples/: README.md  bars.py  data.py  ema_rsi.ipynb  ema_rsi.py  interactive_dashboard_example.py  keltner_channel.ipynb  keltner_channel.py  pairs_test.ipynb  volatility.ipynb  yt_strat.ipynb
research/: coint_experiment.ipynb  kalman_experiment_log.ipynb  spread_based.ipynb
src/: __init__.py  backtester.py  bar_ops.py  databuilder.py  dataset_builder.py  live.py  names.py  pairs_selection.py  preprocessing.py  rest_databuilder.py  util.py
src/bacta/: backtester.py  monte_carlo.py
src/bacta/utilities/: __init__.py  logger.py  plotting.py
src/trash/: coint_rolling_mean.ipynb  databuilder.py  dataset_builder.py  pca_stuff.py  rest_databuilder.py  spread_based_v2.ipynb
src/utilities/: __init__.py  bars.py  logger.py  market.py  plotting.py
test/: __init__.py  test_backtester.py
tests/: __init__.py  test_backtester.py
